create 'style.css' text file and add 'div's' to index.html file

--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <link rel="stylesheet" href="style.css">
     <sript src="app.js" defer></sript>
   </head>
-
   <body>
-    <h1>LANGWHICH</h1>
+    <div class="title">
+      <h1>LANGWHICH</h1>
+    </div>
+    <div class="main-content">
      <h3>Hi! Welcome to 'LANGWHICH'. Looking to learn a language? You've come to right place.</h3>
      <button>Click Here to Begin</button>
        <h1>Which language would you like to learn?</h1>
        <button>FRENCH</button>
+    </div>
   </body>
 </html>
 
