create extra 'div' in HTMLtext file for the 'click to begin' button

--- a/index.html
+++ b/index.html
@@ -9,12 +9,17 @@
   <body>
     <div class="title">
       <h1>LANGWHICH</h1>
-    </div>
-    <div class="main-content">
-     <h3>Hi! Welcome to 'LANGWHICH'. Looking to learn a language? You've come to right place.</h3>
-     <button>Click Here to Begin</button>
-       <h1>Which language would you like to learn?</h1>
-       <button>FRENCH</button>
+     </div>
+     <div class="main-content">
+       <h3>Hi! Welcome to 'LANGWHICH'.</h3>
+      <div class="tagline">
+        <h3>Looking to learn a language? You've come to right place.</h3>
+      </div>
+      <div class="choice">
+        <button class="clickme">Click Here to Begin</button>
+          <h1>Which language would you like to learn?</h1>
+          <button class="french">FRENCH</button>
+      </div>
     </div>
   </body>
 </html>
