create 'app.js' text file and add a 'onclick' event to it

--- a/index.html
+++ b/index.html
@@ -6,22 +6,27 @@
     <link rel="stylesheet" href="style.css">
     <sript src="app.js" defer></sript>
   </head>
-  <body>
-    <div class="title">
-      <h1>LANGWHICH</h1>
+
+   <body>
+    <!--div for title 'h1' only-->
+     <div class="title">
+       <h1>LANGWHICH</h1>
      </div>
+     <!--div created for everything else within this page-->
      <div class="main-content">
        <h3>Hi! Welcome to 'LANGWHICH'.</h3>
-      <div class="tagline">
+       <!--div for the opening statement(h3) for website-->
+       <div class="tagline">
         <h3>Looking to learn a language? You've come to right place.</h3>
-      </div>
-      <div class="choice">
-        <button class="clickme">Click Here to Begin</button>
-          <h1>Which language would you like to learn?</h1>
-          <button class="french">FRENCH</button>
-      </div>
-    </div>
-  </body>
+       </div>
+       <!--div for '.choice' class, for both button elements and h1 element-->
+       <div class="choice">
+         <button class="clickme">Click Here to Begin</button>
+           <h1>Which language would you like to learn?</h1>
+           <button class="french">FRENCH</button>
+       </div>
+     </div>
+   </body>
 </html>
 
 <!--create a language learning app using javascript
