--- a/langwhich_pages/quiz.html
+++ b/langwhich_pages/quiz.html
@@ -1,11 +1,20 @@
 <main>
   <head>
+    <link rel="stylesheet" href="quiz.css">
     <title>The Quiz</title>
   </head>
   <body>
-    <h1>The Quiz</h1>
-    <h3>Ready to Begin?</h3>
-    <button>Click Here!</button>
+    <div class="main-content">
+      <div class="title">
+        <h1>The 'Langwhich' Quiz</h1>
+      </div>
+      <div class="tagline">
+        <h3>Ready to Begin?</h3>
+      </div>
+      <div class="clickme">
+        <button>Click Here!</button>
+      </div>
+    </div>
   </body>
 </main>
 
