add flag to to-right of homepage and create a 'dropdown' element to css text file

--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -4,14 +4,25 @@
     <link rel="stylesheet" href="homepage.css">
   </head>
   <body>
+    <!--"border" div for panel of features-->
     <div class="border">
-      <div class="panel color">
+        <!--div for panel, for USERS to navigate-->
+      <div class="panel">
         <h3>Home</h3>
         <h3>Quiz</h3>
         <h3>Learner</h3>
         <h3>Convo-System</h3>
+        <h3>language</h3>
+        <!--flag div for USERS to change language-->
+          <div class="flag-lang">
+            <a><img src="../images/british_flag.jpeg" alt="british" width="100"></a>
+            <div class="lang">
+              <h5>French</h5>
+            </div>
+          </div>
       </div>
     </div>
+    <!--"panel-two" div created for content-->
     <div class="panel-two">
       <div class="text">
         <p><strong>"Langwhich" is a project of mine that is made to help<br> people looking to learn a language
@@ -21,6 +32,7 @@
           P.S. more languages will be added in the future.
         </strong></p>
       </div>
+      <!--div for flag picture-->
       <div class="flags">
         <img src="../images/country_flags.jpeg" alt="flags" width="500">
       </div>
