create duplicate of 'homepage.html' and 'homepage.css' text files in french language and name it with an '_(language abbreviation) e.g. 'homepage_fr.html'

--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -17,7 +17,7 @@
           <div class="flag-lang">
             <a><img src="../images/british_flag.jpeg" alt="british" width="100"></a>
             <div class="lang">
-              <h5>French</h5>
+              <h5><a href="homepage_fr.html">French</a></h5>
             </div>
           </div>
       </div>
