create and structure content and design for 'question1.html' and 'question1.css'

--- a/homepage/quiz/level1/question1.html
+++ b/homepage/quiz/level1/question1.html
@@ -15,11 +15,32 @@
         <h3>language</h3>
         <!--flag div for USERS to change language-->
           <div class="flag-lang">
-            <a><img src="file:///Users/ryanhenry/repos/langwhich/images/british_flag.jpeg" alt="british" width="100"></a>
+            <a><img src="file:///Users/ryanhenry/repos/langwhich/images/british_flag.jpeg" 
+                alt="british" width="100"></a>
             <div class="lang">
               <h5><a href="homepage_fr.html">French</a></h5>
             </div>
           </div>
+      </div>
+    </div>
+    <div class="quiz-content">
+      <div class="header">
+        <h2>Question 1</h2>
+      </div>
+      <div class="question">
+        <h2>How do you say "Hello" in french?</h2>
+      </div>
+      <div class="answers">
+        <div class="row">
+          <div class="column">
+            <button>Bonjour!</button>
+            <button>Oui!</button>
+          </div>
+          <div class="column">
+            <button>Arrêt</button>
+            <button>S'il te plaît</button>
+          </div>
+        </div>
       </div>
     </div>
   </body>
