add comments to question1.html file for readers

--- a/homepage/quiz/level1/question1.html
+++ b/homepage/quiz/level1/question1.html
@@ -23,13 +23,17 @@
           </div>
       </div>
     </div>
+    
+    <!--div content for quiz-->
     <div class="quiz-content">
       <div class="header">
         <h2>Question 1</h2>
       </div>
+      <!--div for question-->
       <div class="question">
         <h2>How do you say "Hello" in french?</h2>
       </div>
+      <!--div for answers and for 2x2 row/column display-->
       <div class="answers">
         <div class="row">
           <div class="column">
