remove orginal content from html file for questionaire and replace with basic elements as a temporary template.

--- a/homepage/quiz/level1/question1.html
+++ b/homepage/quiz/level1/question1.html
@@ -4,6 +4,27 @@
     <link rel="stylesheet" href="question1.css">
   </head>
   <body>
+    <!--"border" div for panel of features-->
+    <div class="border">
+        <!--div for panel, for USERS to navigate-->
+      <div class="panel">
+        <h3>Home</h3>
+        <h3>Quiz</h3>
+        <h3>Learner</h3>
+        <h3>Convo-System</h3>
+        <h3>language</h3>
+        <!--flag div for USERS to change language-->
+          <div class="flag-lang">
+            <a><img src="file:///Users/ryanhenry/repos/langwhich/images/british_flag.jpeg" 
+                alt="british" width="100"></a>
+            <div class="lang">
+              <h5><a href="homepage_fr.html">French</a></h5>
+            </div>
+          </div>
+      </div>
+    </div>
+    
+    <!--div content for quiz-->
     <div class="container">
       <div id="question-container" class="hide">
         <div id="question">Question</div>
