Add <script> tag to html file to link to question1.js file and save changes to css and js files

--- a/homepage/quiz/level1/question1.html
+++ b/homepage/quiz/level1/question1.html
@@ -1,14 +1,16 @@
+<!DOCTYPE html>
 <main>
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="question1.css">
+    <script defer src="question1.js"></script>
   </head>
   <body>
     <!--"border" div for panel of features-->
     <div class="border">
         <!--div for panel, for USERS to navigate-->
       <div class="panel">
-        <h3>Home</h3>
+        <h3><a>Home</a></h3>
         <h3>Quiz</h3>
         <h3>Learner</h3>
         <h3>Convo-System</h3>
