--- a/homepage/quiz/level1/question1.html
+++ b/homepage/quiz/level1/question1.html
@@ -12,6 +12,9 @@
       <div class="panel">
         <h3><a>Home</a></h3>
         <h3>Quiz</h3>
+        <h3>Learner</h3>
+        <h3>Convo-System</h3>
+        <h3>language</h3>
         <!--flag div for USERS to change language-->
           <div class="flag-lang">
             <a><img src="file:///Users/ryanhenry/repos/langwhich/images/british_flag.jpeg" 
