--- a/homepage/quiz/quiz.html
+++ b/homepage/quiz/quiz.html
@@ -4,17 +4,32 @@
     <title>The Quiz</title>
   </head>
   <body>
-    <div class="main-content">
-      <div class="title">
-        <h1>The 'Langwhich' Quiz</h1>
-      </div>
-      <div class="tagline">
-        <h3>Ready to Begin?</h3>
-      </div>
-      <div class="clickme">
-        <button>Click Here!</button>
-      </div>
+     <!--"border" div for border color and features-->
+    <div class="border">
+      <!--div for panel, for USERS to navigate-->
+      <div class="panel">
+        <h3><a href=/Users/ryanhenry/repos/langwhich/homepage/homepage.html>Home</a></h3>
+        <h3><a href="/Users/ryanhenry/repos/langwhich/homepage/quiz/quiz.html">Quiz</a></h3>
+      <!--flag div for USERS to change language-->
+          <div class="flag-lang">
+            <a><img src="../images/british_flag.jpeg" alt="british" width="100"></a>
+            <div class="lang">
+              <h5><a href="homepage_fr.html">French</a></h5>
+            </div>
+          </div>
     </div>
+    </div>
+      <div class="main-content">
+        <div class="title">
+          <h1>The 'Langwhich' Quiz</h1>
+        </div>
+        <div class="tagline">
+          <h3>Ready to Begin?</h3>
+        </div>
+        <div class="clickme">
+          <button><a href="/Users/ryanhenry/repos/langwhich/homepage/quiz/level1/question1.html">Click Here!</a></button>
+        </div>
+      </div>
   </body>
 </main>
 
