Add links to 'Home' and 'Quiz' header and decorate in css

--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -4,15 +4,12 @@
     <link rel="stylesheet" href="homepage.css">
   </head>
   <body>
-    <!--"border" div for panel of features-->
+    <!--"border" div for border color and features-->
     <div class="border">
         <!--div for panel, for USERS to navigate-->
       <div class="panel">
-        <h3>Home</h3>
-        <h3>Quiz</h3>
-        <h3>Learner</h3>
-        <h3>Convo-System</h3>
-        <h3>language</h3>
+        <h3><a href="homepage.html">Home</a></h3>
+        <h3><a href="/Users/ryanhenry/repos/langwhich/homepage/quiz/quiz.html">Quiz</a></h3>
         <!--flag div for USERS to change language-->
           <div class="flag-lang">
             <a><img src="../images/british_flag.jpeg" alt="british" width="100"></a>
@@ -34,7 +31,7 @@
       </div>
       <!--div for flag picture-->
       <div class="flags">
-        <img src="../images/country_flags.jpeg" alt="flags" width="500">
+        <img src="../images/country_flags.jpeg" alt="countryflag" width="500">
       </div>
     </div>
   </body>
