--- a/homepage/homepage_fr.html
+++ b/homepage/homepage_fr.html
@@ -8,11 +8,8 @@
     <div class="border">
         <!--div for panel, for USERS to navigate-->
       <div class="panel">
-        <h3>Maison</h3>
+        <h3><a href="homepage_fr.html">Maison</a></h3>
         <h3>Le Quiz</h3>
-        <h3>l' apprenant</h3>
-        <h3>Système de conversation</h3>
-        <h3>Langue</h3>
         <!--flag div for USERS to change language-->
           <div class="flag-lang">
             <a><img src="../images/french_flag.jpeg" alt="french" width="100" height="50"></a>
