Fix image within flag-lang class div to show

--- a/homepage/quiz/quiz.html
+++ b/homepage/quiz/quiz.html
@@ -12,7 +12,7 @@
         <h3><a href="/Users/ryanhenry/repos/langwhich/homepage/quiz/quiz.html">Quiz</a></h3>
       <!--flag div for USERS to change language-->
           <div class="flag-lang">
-            <a><img src="../images/british_flag.jpeg" alt="british" width="100"></a>
+            <a><img src="../../images/british_flag.jpeg" alt="british" width="100"></a>
             <div class="lang">
               <h5><a href="homepage_fr.html">French</a></h5>
             </div>
