--- a/homepage/homepage_fr.html
+++ b/homepage/homepage_fr.html
@@ -9,12 +9,12 @@
         <!--div for panel, for USERS to navigate-->
       <div class="panel">
         <h3><a href="homepage_fr.html">Maison</a></h3>
-        <h3>Le Quiz</h3>
+        <h3><a href="quiz/quiz_fr.html">Le Quiz</a></h3>
         <!--flag div for USERS to change language-->
           <div class="flag-lang">
             <a><img src="../images/french_flag.jpeg" alt="french" width="100" height="50"></a>
             <div class="lang">
-              <a href="homepage.html"><h5>English</h5></a>
+              <a href="homepage.html"><h5>Anglais</h5></a>
             </div>
           </div>
       </div>
