--- a/homepage/quiz/quiz.html
+++ b/homepage/quiz/quiz.html
@@ -14,7 +14,7 @@
           <div class="flag-lang">
             <a><img src="../../images/british_flag.jpeg" alt="british" width="100"></a>
             <div class="lang">
-              <h5><a href="homepage_fr.html">French</a></h5>
+              <h5><a href="quiz_fr.html">French</a></h5>
             </div>
           </div>
       </div>
