--- a/homepage/quiz/level1/question1.html
+++ b/homepage/quiz/level1/question1.html
@@ -17,7 +17,7 @@
             <a><img src="file:///Users/ryanhenry/repos/langwhich/images/british_flag.jpeg" 
                 alt="british" width="100"></a>
             <div class="lang">
-              <h5><a href="homepage_fr.html">French</a></h5>
+              <h5><a href="question1_fr.html">French</a></h5>
             </div>
           </div>
       </div>
