--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -7,21 +7,21 @@
     <!--"border" div for border color and features-->
     <div class="border">
         <!--div for panel, for USERS to navigate-->
-      <div class="panel">
-        <h3><a href="homepage.html">Home</a></h3>
-        <h3><a href="/Users/ryanhenry/repos/langwhich/homepage/quiz/quiz.html">Quiz</a></h3>
-        <!--flag div for USERS to change language-->
-          <div class="flag-lang">
-            <a><img src="../images/british_flag.jpeg" alt="british" width="100"></a>
-            <div class="lang">
-              <h5><a href="homepage_fr.html">French</a></h5>
+        <div class="panel">
+          <h3><a href="homepage.html">Home</a></h3>
+          <h3><a href="/Users/ryanhenry/repos/langwhich/homepage/quiz/quiz.html">Quiz</a></h3>
+          <!--flag div for USERS to change language-->
+            <div class="flag-lang">
+              <a><img src="../images/british_flag.jpeg" alt="british" width="100"></a>
+              <div class="lang">
+                <h5><a href="homepage_fr.html">French</a></h5>
+              </div>
             </div>
-          </div>
-      </div>
+        </div>    
     </div>
     <!--"panel-two" div created for content-->
     <div class="panel-two">
-      <div class="text">
+      <div class="text one">
         <p><strong>"Langwhich" is a project of mine that is made to help<br> people looking to learn a language
           but also have fun<br> doing so. Whilst still in working in progress, I have<br> provided a quiz, dictionary
           and conversation for users<br> to help practice their language skills.<br><br>
@@ -32,6 +32,31 @@
       <!--div for flag picture-->
       <div class="flags">
         <img src="../images/country_flags.jpeg" alt="countryflag" width="500">
+      </div>
+    </div>
+
+   <!--second part of content-->
+    <div class="panel-three">
+      <div class="text two">
+        <p><strong>This will also be a community based website so please feel to add<br> feedback and or
+          give any advice on improvement.
+        </strong></p>
+      </div>
+    </div>
+    <div class="bottom-border">
+      <div class="bottom-container">
+        <div id="email">
+          <img src="../images/email_icon.jpeg" width="30" height="30">
+          <h5><a href="mailto: ryan-henry@hotmail.co.uk">ryan-henry@hotmail.co.uk</a></h5>
+        </div>
+        <div id="linkedin">
+          <img src="../images/linkedin.png" width="30" height="30">
+          <h5><a href="https://www.linkedin.com/in/ryan-henry-17004a12b/">Ryan Henry</a></h5>
+        </div>
+        <div id="github">
+          <img src="../images/github-sign.png" width="30" height="30">
+          <h5><a href="https://github.com/RyanLH95">RyanLH95</a></h5>
+        </div>
       </div>
     </div>
   </body>
