Make changes to fix 'whitespace' on the right hand side of the screen using margin properties. Keep testing for solutions

--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -10,6 +10,7 @@
         <div class="panel">
           <h3><a href="homepage.html">Home</a></h3>
           <h3><a href="/Users/ryanhenry/repos/langwhich/homepage/quiz/quiz.html">Quiz</a></h3>
+          <h5>Eng</h5>
           <!--flag div for USERS to change language-->
             <div class="flag-lang">
               <a><img src="../images/british_flag.jpeg" alt="british" width="100"></a>
