replicate changes made 'homepage.html and homepage.css' and add them to 'homepage_fr.html and homepage_fr.css'

--- a/homepage/homepage_fr.html
+++ b/homepage/homepage_fr.html
@@ -9,7 +9,8 @@
         <!--div for panel, for USERS to navigate-->
       <div class="panel">
         <h3><a href="homepage_fr.html">Maison</a></h3>
-        <h3><a href="quiz/quiz_fr.html">Le Quiz</a></h3>
+        <h3><a id="quiz" href="quiz/quiz_fr.html">Le Quiz</a></h3>
+        <h5>Fr</h5>
         <!--flag div for USERS to change language-->
           <div class="flag-lang">
             <a><img src="../images/french_flag.jpeg" alt="french" width="100" height="50"></a>
@@ -34,6 +35,32 @@
       <!--div for flag picture-->
       <div class="flags">
         <img src="../images/country_flags.jpeg" alt="flags" width="500">
+      </div>
+    </div>
+
+    <!--second part of content-->
+    <div class="panel-three">
+      <div class="text two">
+        <p><strong>
+          Ce sera également un site Web communautaire, alors n'hésitez pas<br> à ajouter
+          commentaires et/ou donner des conseils d'amélioration.
+        </strong></p>
+      </div>
+    </div>
+    <div class="bottom-border">
+      <div class="bottom-container">
+        <div id="email">
+          <img src="../images/email_icon.jpeg" width="30" height="30">
+          <h5><a href="mailto: ryan-henry@hotmail.co.uk">ryan-henry@hotmail.co.uk</a></h5>
+        </div>
+        <div id="linkedin">
+          <img src="../images/linkedin.png" width="30" height="30">
+          <h5><a href="https://www.linkedin.com/in/ryan-henry-17004a12b/">Ryan Henry</a></h5>
+        </div>
+        <div id="github">
+          <img src="../images/github-sign.png" width="30" height="30">
+          <h5><a href="https://github.com/RyanLH95">RyanLH95</a></h5>
+        </div>
       </div>
     </div>
   </body>
