--- a/homepage/quiz/quiz.html
+++ b/homepage/quiz/quiz.html
@@ -1,23 +1,24 @@
 <main>
   <head>
-    <link rel="stylesheet" href="quiz.css">
-    <title>The Quiz</title>
+    <meta charset="utf-8" lang="eng">
+    <link rel="stylesheet" href="homepage.css">
   </head>
   <body>
-     <!--"border" div for border color and features-->
+    <!--"border" div for border color and features-->
     <div class="border">
-      <!--div for panel, for USERS to navigate-->
-      <div class="panel">
-        <h3><a href=/Users/ryanhenry/repos/langwhich/homepage/homepage.html>Home</a></h3>
-        <h3><a href="/Users/ryanhenry/repos/langwhich/homepage/quiz/quiz.html">Quiz</a></h3>
-      <!--flag div for USERS to change language-->
-          <div class="flag-lang">
-            <a><img src="../../images/british_flag.jpeg" alt="british" width="100"></a>
-            <div class="lang">
-              <h5><a href="quiz_fr.html">French</a></h5>
+        <!--div for panel, for USERS to navigate-->
+        <div class="panel">
+          <h3><a href="homepage.html">Home</a></h3>
+          <h3><a href="/Users/ryanhenry/repos/langwhich/homepage/quiz/quiz.html">Quiz</a></h3>
+          <h5>Eng</h5>
+          <!--flag div for USERS to change language-->
+            <div class="flag-lang">
+              <a><img src="../images/british_flag.jpeg" alt="british" width="100"></a>
+              <div class="lang">
+                <h5><a href="homepage_fr.html">French</a></h5>
+              </div>
             </div>
-          </div>
-      </div>
+        </div>    
     </div>
 
     <div class="main-content">
