--- a/homepage/quiz/quiz_fr.html
+++ b/homepage/quiz/quiz_fr.html
@@ -1,23 +1,24 @@
 <main>
   <head>
     <link rel="stylesheet" href="quiz_fr.css">
-    <title>The Quiz</title>
+    <title>Le Quiz</title>
   </head>
   <body>
      <!--"border" div for border color and features-->
     <div class="border">
       <!--div for panel, for USERS to navigate-->
       <div class="panel">
-        <h3><a href=/Users/ryanhenry/repos/langwhich/homepage/homepage_fr.html>Maison</a></h3>
-        <h3><a href="/Users/ryanhenry/repos/langwhich/homepage/quiz/quiz_fr.html">Le Quiz</a></h3>
-      <!--flag div for USERS to change language-->
+        <h3><a href="../homepage_fr.html">Maison</a></h3>
+        <h3 id="quiz"><a href="/Users/ryanhenry/repos/langwhich/homepage/quiz/quiz_fr.html">Le Quiz</a></h3>
+        <h5>Fr</h5>
+        <!--flag div for USERS to change language-->
           <div class="flag-lang">
-            <a><img src="../../images/french_flag.jpeg" alt="french" width="100" height="50"></a>
+            <a><img src="../../images/french_flag.jpeg" alt="british" width="100" height="50"></a>
             <div class="lang">
               <h5><a href="quiz.html">Anglais</a></h5>
             </div>
           </div>
-      </div>
+      </div>    
     </div>
 
     <div class="main-content">
@@ -28,7 +29,7 @@
         <h3>Prêt à commencer?</h3>
       </div>
       <div class="clickme">
-        <button><a href="/Users/ryanhenry/repos/langwhich/homepage/quiz/level1/question1.html">Cliquez Ici!</a></button>
+        <button><a href="/Users/ryanhenry/repos/langwhich/homepage/quiz/level1/question1_fr.html">Cliquez Ici!</a></button>
       </div>
     </div>
   </body>
