Add new changes to border and headers to replicate other pages

--- a/homepage/quiz/level1/question1.html
+++ b/homepage/quiz/level1/question1.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <main>
   <head>
     <meta charset="utf-8">
@@ -6,21 +5,21 @@
     <script defer src="question1.js"></script>
   </head>
   <body>
-    <!--"border" div for panel of features-->
+    <!--"border" div for border color and features-->
     <div class="border">
         <!--div for panel, for USERS to navigate-->
-      <div class="panel">
-        <h3><a href="../../homepage.html">Home</a></h3>
-        <h3>Quiz</h3>
-        <!--flag div for USERS to change language-->
-          <div class="flag-lang">
-            <a><img src="file:///Users/ryanhenry/repos/langwhich/images/british_flag.jpeg" 
-                alt="british" width="100"></a>
-            <div class="lang">
-              <h5><a href="question1_fr.html">French</a></h5>
+        <div class="panel">
+          <h3><a href="homepage.html">Home</a></h3>
+          <h3><a href="/Users/ryanhenry/repos/langwhich/homepage/quiz/quiz.html">Quiz</a></h3>
+          <h5>Eng</h5>
+          <!--flag div for USERS to change language-->
+            <div class="flag-lang">
+              <a><img src="file:///Users/ryanhenry/repos/langwhich/images/british_flag.jpeg" alt="british" width="100"></a>
+              <div class="lang">
+                <h5><a href="question1_fr.html">French</a></h5>
+              </div>
             </div>
-          </div>
-      </div>
+        </div>    
     </div>
     
     <!--div content for quiz-->
