--- a/homepage/quiz/level1/question1.html
+++ b/homepage/quiz/level1/question1.html
@@ -1,6 +1,6 @@
 <main>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" lang="eng">
     <link rel="stylesheet" href="question1.css">
     <script defer src="question1.js"></script>
   </head>
