--- a/homepage/homepage_fr.html
+++ b/homepage/homepage_fr.html
@@ -1,6 +1,6 @@
 <main>
   <head>
-    <meta charset="utf-8" lang="eng">
+    <meta charset="utf-8" lang="fr">
     <link rel="stylesheet" href="homepage_fr.css">
   </head>
   <body>
