Add new changes to border and headers to replicate other pages

--- a/homepage/quiz/level1/question1_fr.html
+++ b/homepage/quiz/level1/question1_fr.html
@@ -1,6 +1,6 @@
 <main>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" lang="fr">
     <link rel="stylesheet" href="question1_fr.css">
     <script defer src="question1_fr.js"></script>
   </head>
@@ -9,14 +9,14 @@
     <div class="border">
         <!--div for panel, for USERS to navigate-->
       <div class="panel">
-        <h3><a href="../../homepage_fr.html">Maison</a></h3>
-        <h3>Le Quiz</h3>
+        <h3><a href="homepage_fr.html">Maison</a></h3>
+        <h3><a id="quiz" href="quiz/quiz_fr.html">Le Quiz</a></h3>
+        <h5>Fr</h5>
         <!--flag div for USERS to change language-->
           <div class="flag-lang">
-            <a><img src="file:///Users/ryanhenry/repos/langwhich/images/french_flag.jpeg" 
-                alt="french" width="100" height="50"></a>
+            <a><img src="file:///Users/ryanhenry/repos/langwhich/images/french_flag.jpeg" alt="french" width="100" height="50"></a>
             <div class="lang">
-              <h5><a href="question1.html">Anglais</a></h5>
+              <a href="homepage.html"><h5>Anglais</h5></a>
             </div>
           </div>
       </div>
