--- a/homepage/quiz/level1/question1.html
+++ b/homepage/quiz/level1/question1.html
@@ -9,7 +9,7 @@
     <div class="border">
         <!--div for panel, for USERS to navigate-->
         <div class="panel">
-          <h3><a href="homepage.html">Home</a></h3>
+          <h3><a href="../../homepage.html">Home</a></h3>
           <h3><a href="/Users/ryanhenry/repos/langwhich/homepage/quiz/quiz.html">Quiz</a></h3>
           <h5>Eng</h5>
           <!--flag div for USERS to change language-->
