Add homepage_fr.html, question1_fr.html and quiz_fr.html. remove lang='eng' from '_fr' files

--- a/homepage/homepage_fr.html
+++ b/homepage/homepage_fr.html
@@ -1,6 +1,6 @@
 <main>
   <head>
-    <meta charset="utf-8" lang="fr">
+    <meta charset="utf-8">
     <link rel="stylesheet" href="homepage_fr.css">
   </head>
   <body>
