--- a/homepage/quiz/level1/question1_fr.html
+++ b/homepage/quiz/level1/question1_fr.html
@@ -1,6 +1,6 @@
 <main>
   <head>
-    <meta charset="utf-8" lang="fr">
+    <meta charset="utf-8">
     <link rel="stylesheet" href="question1_fr.css">
     <script defer src="question1_fr.js"></script>
   </head>
