Edit path for 'img scr' for quiz.html and quiz_fr.html

--- a/quiz/quiz_fr.html
+++ b/quiz/quiz_fr.html
@@ -14,7 +14,7 @@
         <h5>Fr</h5>
         <!--flag div for USERS to change language-->
           <div class="flag-lang">
-            <a><img src="../../images/french_flag.jpeg" alt="british" width="100" height="50"></a>
+            <a><img src="../images/french_flag.jpeg" alt="british" width="100" height="50"></a>
             <div class="lang">
               <h5><a href="quiz.html">Anglais</a></h5>
             </div>
