--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -13,7 +13,7 @@
         <h5>Eng</h5>
         <!--flag div for USERS to change language-->
           <div class="flag-lang">
-            <a><img src="../../images/british_flag.jpeg" alt="british" width="100"></a>
+            <a><img src="../images/british_flag.jpeg" alt="british" width="100"></a>
             <div class="lang">
               <h5><a href="quiz_fr.html">French</a></h5>
             </div>
