correct path to index.html and index_fr.html files i=within home/maison links

--- a/quiz/quiz_fr.html
+++ b/quiz/quiz_fr.html
@@ -9,7 +9,7 @@
     <div class="border">
       <!--div for panel, for USERS to navigate-->
       <div class="panel">
-        <h3><a href="../homepage_fr.html">Maison</a></h3>
+        <h3><a href="../index_fr.html">Maison</a></h3>
         <h3 id="quiz"><a href="/Users/ryanhenry/repos/langwhich/homepage/quiz/quiz_fr.html">Le Quiz</a></h3>
         <h5>Fr</h5>
         <!--flag div for USERS to change language-->
