Connect all links and correct all paths to other pages

--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -9,7 +9,7 @@
     <div class="border">
       <!--div for panel, for USERS to navigate-->
       <div class="panel">
-        <h3><a href="../index.html">Home</a></h3>
+        <h3><a href="index.html">Home</a></h3>
         <h3><a href="/Users/ryanhenry/repos/langwhich/homepage/quiz/quiz.html">Quiz</a></h3>
         <h5>Eng</h5>
         <!--flag div for USERS to change language-->
@@ -30,7 +30,7 @@
         <h3>Ready to Begin?</h3>
       </div>
       <div class="clickme">
-        <button><a href="/Users/ryanhenry/repos/langwhich/homepage/quiz/level1/question1.html">Click Here!</a></button>
+        <button><a href="/Users/ryanhenry/repos/langwhich/quiz/level1/question1.html">Click Here!</a></button>
       </div>
     </div>
   </body>
