Remove link to quiz.html and quiz_fr.html as it is the same page

--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -10,7 +10,7 @@
       <!--div for panel, for USERS to navigate-->
       <div class="panel">
         <h3><a href="index.html">Home</a></h3>
-        <h3><a href="/Users/ryanhenry/repos/langwhich/homepage/quiz/quiz.html">Quiz</a></h3>
+        <h3>Quiz</h3>
         <h5>Eng</h5>
         <!--flag div for USERS to change language-->
           <div class="flag-lang">
