--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -9,7 +9,7 @@
     <div class="border">
       <!--div for panel, for USERS to navigate-->
       <div class="panel">
-        <h3><a href="index.html">Home</a></h3>
+        <h3><a href="../index.html">Home</a></h3>
         <h3>Quiz</h3>
         <h5>Eng</h5>
         <!--flag div for USERS to change language-->
