--- a/quiz/quiz_fr.html
+++ b/quiz/quiz_fr.html
@@ -10,7 +10,7 @@
       <!--div for panel, for USERS to navigate-->
       <div class="panel">
         <h3><a href="../index_fr.html">Maison</a></h3>
-        <h3 id="quiz">Le Quiz</h3>
+        <h3 id="quiz"><a href="quiz_fr.html">Le Quiz</h3>
         <h5>Fr</h5>
         <!--flag div for USERS to change language-->
           <div class="flag-lang">
