fix href link in Click Here/Cliquez Ici button

--- a/quiz/quiz_fr.html
+++ b/quiz/quiz_fr.html
@@ -30,7 +30,7 @@
         <h3>Prêt à commencer?</h3>
       </div>
       <div class="clickme">
-        <button><a href="/Users/ryanhenry/repos/langwhich/quiz/level1/question1_fr.html">Cliquez Ici!</a></button>
+        <button><a href="level1/question1_fr.html">Cliquez Ici!</a></button>
       </div>
     </div>
   </body>
