--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -30,7 +30,7 @@
         <h3>Ready to Begin?</h3>
       </div>
       <div class="clickme">
-        <button><a href="/Users/ryanhenry/repos/langwhich/quiz/level1/question1.html">Click Here!</a></button>
+        <button><a href="level1/question1.html">Click Here!</a></button>
       </div>
     </div>
   </body>
