fix link for class flag-lang <img> in question1.html and question1_fr.html

--- a/quiz/level1/question1_fr.html
+++ b/quiz/level1/question1_fr.html
@@ -14,7 +14,7 @@
         <h5>Fr</h5>
         <!--flag div for USERS to change language-->
           <div class="flag-lang">
-            <a><img src="file:///Users/ryanhenry/repos/langwhich/images/french_flag.jpeg" alt="french" width="100" height="50"></a>
+            <a><img src="../../images/french_flag.jpeg" alt="french" width="100" height="50"></a>
             <div class="lang">
               <a href="question1.html"><h5>Anglais</h5></a>
             </div>
