--- a/quiz/level1/question1.html
+++ b/quiz/level1/question1.html
@@ -14,7 +14,7 @@
           <h5>Eng</h5>
           <!--flag div for USERS to change language-->
             <div class="flag-lang">
-              <a><img src="file:///Users/ryanhenry/repos/langwhich/images/british_flag.jpeg" alt="british" width="100"></a>
+              <a><img src="../../images/british_flag.jpeg" alt="british" width="100"></a>
               <div class="lang">
                 <h5><a href="question1_fr.html">French</a></h5>
               </div>
